<resources>
    <string name="app_name">Fut 7 Iteso</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Liga Futbol 7 ITESO</string>
    <string name="nav_header_subtitle">Bienvenido itesiano</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="activity_create_tanda_fecha">Fecha</string>
    <string name="menu_calendario">Calendario</string>
    <string name="menu_tablageneral">Tabla general</string>
    <string name="menu_goleadores">Goleadores</string>
    <string name="menu_foro">Foro</string>
    <string name="menu_equipo">Equipo</string>
    <string name="menu_codigo">Ingresa tu codigo</string>
    <string name="item_jornada_jornada_n">Jornada n</string>
    <string name="item_jornada_equipo_1">Equipo 1</string>
    <string name="item_jornada_equipo_2">Equipo 2</string>
    <string name="item_jornada_defscore">1–0</string>
    <string name="item_jornada_button_string">Ver</string>
    <string name="activity_ing_jug_siguiente">siguiente</string>
    <string name="activity_partido_0">0</string>
    <string name="activity_partido_vs">VS</string>
    <string name="crear_equipo_nombreequipo">Nombre del equipo:</string>
    <string name="crear_equipo_escudoequipo">Escudo del equipo:</string>
    <string name="crear_equipo_nombre_capitan">Nombre del capitan:</string>
    <string name="crear_equipo_telefono">Telefono</string>
    <string name="crear_equipo_correoelectronico">Correo Electronico:</string>
    <string name="crear_equipo_comprobantepago">Comprobante de pago:</string>
    <string name="crear_equipo_continuar">Continuar</string>
    <string name="fragment_codigo_description">¡Ingresa el código de tu equipo!</string>
    <string name="fragment_codigo_ingresar">Ingresar</string>
    <string name="fragment_equipo_teamname">Pallacracks</string>
    <string name="fragment_foro_hint">Ingresa tu mensaje…</string>
    <string name="fragment_foro_send">Enviar mensaje</string>
    <string name="fragment_goleadores_pos">POS</string>
    <string name="fragment_goleadores_jugador">Jugador</string>
    <string name="fragment_goleadores_equipo">Equipo</string>
    <string name="fragment_goleadores_goles">Goles</string>
    <string name="fragment_tablageneral_pj">PJ</string>
    <string name="fragment_tablageneral_pg">PG</string>
    <string name="fragment_tablageneral_pe">PE</string>
    <string name="fragment_tablageneral_pp">PP</string>
    <string name="fragment_tablageneral_gc">GC</string>
    <string name="fragment_tablageneral_gf">GF</string>
    <string name="fragment_tablageneral_dg">DG</string>
    <string name="fragment_tablageneral_pts">PTS</string>
    <string name="item_equipo_tabla_club_default">Club Default</string>
    <string name="item_equipo_tabla_4">4</string>
    <string name="item_equipo_tabla_2">2</string>
    <string name="item_equipo_tabla_1">1</string>
    <string name="item_goleador_default">Default</string>
    <string name="item_evento_jugador_def">Luis Fernando Gutierrez Preciado</string>
    <string name="item_ingresa_jugador_nombre">Ingresa el nombre</string>
    <string name="item_ingresa_jugador_expediente">Expediente:</string>
    <string name="item_jugador_expediente_default">670965 ISC</string>
    <string name="item_jugador_goles_default">Goles: 27</string>
    <string name="item_jugador_amarillas_default">Amarillas: 0</string>
    <string name="item_jugador_rojas_default">Rojas: 2</string>
    <string name="item_mensaje_def_user">Ian27Diaz dijo:</string>
    <string name="item_mensaje_def_fecha">27/08/1998</string>
    <string name="item_mensaje_def_mensajeprueba">Mensaje de prueba</string>
    <string name="login_fut_ingresa">Ingresa</string>
    <string name="login_fut_crearequipo">Crear Equipo</string>
    <string name="wait_screen_mensaje">La creación de tu equipo está siendo procesada</string>
    <string name="wait_screen_inicio">Inicio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
