<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendario"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_calendario" />
        <item
            android:id="@+id/nav_tablageneral"
            android:icon="@drawable/positions"
            android:title="@string/menu_tablageneral" />
        <item
            android:id="@+id/nav_goleadores"
            android:icon="@drawable/boot"
            android:title="@string/menu_goleadores" />
        <item
            android:id="@+id/nav_foro"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/menu_foro"
            android:visible="false"/>
        <item
            android:id="@+id/nav_equipo"
            android:icon="@drawable/equipo"
            android:title="@string/menu_equipo"
            android:visible="false"/>

        <item
            android:id="@+id/nav_equipos_pendientes"
            android:icon="@drawable/equipo"
            android:title="Equipos pendientes"
            android:visible="false"/>

        <item
            android:id="@+id/nav_plantillas_pendientes"
            android:icon="@drawable/equipo"
            android:title="Plantillas pendientes"
            android:visible="false"/>

        <item
            android:id="@+id/nav_codigo"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_codigo"
            />

    </group>

</menu>
