<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/item_jugador_imagen"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/elsiguientemessi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="25dp"
        android:id="@+id/item_jugador_nombreJugador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/item_evento_jugador_def"
        app:layout_constraintTop_toBottomOf="@id/item_jugador_imagen"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="5dp"
        android:id="@+id/item_jugador_expediente_y_carrera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/item_jugador_expediente_default"
        app:layout_constraintTop_toBottomOf="@id/item_jugador_nombreJugador"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="5dp"
        android:id="@+id/item_jugador_goles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/item_jugador_goles_default"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="30dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/item_jugador_expediente_y_carrera"
        app:layout_constraintRight_toLeftOf="@id/item_jugador_amarillas"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="5dp"
        android:id="@+id/item_jugador_amarillas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginEnd="30dp"
        android:text="@string/item_jugador_amarillas_default"
        app:layout_constraintTop_toBottomOf="@id/item_jugador_expediente_y_carrera"
        app:layout_constraintLeft_toRightOf="@id/item_jugador_goles"
        app:layout_constraintRight_toLeftOf="@id/item_jugador_rojas"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="5dp"
        android:id="@+id/item_jugador_rojas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/item_jugador_rojas_default"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/item_jugador_amarillas"
        app:layout_constraintTop_toBottomOf="@id/item_jugador_expediente_y_carrera"/>
</androidx.constraintlayout.widget.ConstraintLayout>