<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/goleadores_guideline_10_v"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/goleadores_guideline_25_v"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/goleadores_guideline_55_v"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".55" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/goleadores_guideline_60_v"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/goleadores_guideline_65_v"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".65" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/goleadores_guideline_70_v"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/goleadores_guideline_75_v"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".75" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/goleadores_guideline_80_v"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/goleadores_guideline_85_v"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/goleadores_guideline_90_v"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/goleadores_guideline_95_v"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".95" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_goleadores_pos"
            android:textColor="@color/cardview_light_background"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/goleadores_guideline_10_v"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/goleadores_nombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_goleadores_jugador"
            android:textAlignment="center"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintStart_toStartOf="@id/goleadores_guideline_10_v"
            app:layout_constraintEnd_toEndOf="@id/goleadores_guideline_55_v"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/goleadores_equipo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_goleadores_equipo"
            android:textColor="@color/cardview_light_background"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@id/goleadores_guideline_55_v"
            app:layout_constraintEnd_toEndOf="@id/goleadores_guideline_90_v"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/goleadores_goles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_goleadores_goles"
            android:textColor="@color/cardview_light_background"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@id/goleadores_guideline_90_v"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_goleadores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>