<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/goleador_guideline_50_h"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/goleador_guideline_10_v"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/goleador_guideline_25_v"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/goleador_guideline_55_v"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/goleador_guideline_60_v"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/goleador_guideline_65_v"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/goleador_guideline_70_v"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/goleador_guideline_75_v"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/goleador_guideline_80_v"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/goleador_guideline_85_v"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/goleador_guideline_90_v"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/goleador_guideline_95_v"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/goleador_POS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_partido_0"
        android:textAlignment="center"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/goleador_guideline_10_v"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/goleador_foto"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/hector_chavez"
        app:layout_constraintStart_toStartOf="@id/goleador_guideline_10_v"
        app:layout_constraintEnd_toEndOf="@id/goleador_guideline_25_v"
        app:layout_constraintTop_toTopOf="parent"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/goleador_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/item_goleador_default"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/goleador_guideline_25_v"
        app:layout_constraintEnd_toEndOf="@id/goleador_guideline_55_v"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/goleador_equipo_escudo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/escudo_default"
        app:layout_constraintStart_toStartOf="@id/goleador_guideline_55_v"
        app:layout_constraintEnd_toEndOf="@id/goleador_guideline_65_v"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/goleador_equipo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fragment_equipo_teamname"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/goleador_guideline_65_v"
        app:layout_constraintEnd_toEndOf="@id/goleador_guideline_90_v"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/goleador_goles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_partido_0"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/goleador_guideline_90_v"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>