<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PartidoActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/partido_guideline_15_h"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/partido_guideline_30_h"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/partido_guideline_25_v"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/partido_guideline_50_v"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/partido_guideline_75_v"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".75" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/partido_marcador"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/partido_guideline_30_h"
        android:background="@drawable/fondo_partido"
        android:gravity="center"

        />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/partido_escudo_local"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/barcelonalogo"
            android:layout_margin="5dp"
            app:layout_constraintBottom_toTopOf="@id/partido_nombre_local"
            app:layout_constraintStart_toStartOf="@id/partido_guideline_25_v"
            app:layout_constraintEnd_toEndOf="@id/partido_guideline_25_v"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/partido_nombre_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_jornada_equipo_1"
            android:textColor="@color/cardview_light_background"
            android:padding="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/partido_marcador_local"
            app:layout_constraintTop_toTopOf="@id/partido_guideline_15_h"
            app:layout_constraintBottom_toBottomOf="@id/partido_guideline_15_h"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/partido_marcador_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_partido_0"
            android:background="@color/cardview_light_background"
            android:padding="5dp"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@id/partido_marcador_vs"
            app:layout_constraintTop_toTopOf="@id/partido_guideline_15_h"
            app:layout_constraintBottom_toBottomOf="@id/partido_guideline_15_h"            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/partido_marcador_vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_partido_vs"
            android:textColor="@color/cardview_light_background"
            android:padding="10dp"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@id/partido_guideline_50_v"
            app:layout_constraintEnd_toEndOf="@id/partido_guideline_50_v"
            app:layout_constraintTop_toTopOf="@id/partido_guideline_15_h"
            app:layout_constraintBottom_toBottomOf="@id/partido_guideline_15_h"            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/partido_marcador_visita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_partido_0"
            android:background="@color/cardview_light_background"
            android:padding="5dp"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="@id/partido_guideline_15_h"
            app:layout_constraintBottom_toBottomOf="@id/partido_guideline_15_h"
            app:layout_constraintStart_toEndOf="@id/partido_marcador_vs"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/partido_escudo_visita"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/barcelonalogo"
            android:layout_margin="5dp"
            app:layout_constraintBottom_toTopOf="@id/partido_nombre_visita"
            app:layout_constraintStart_toStartOf="@id/partido_guideline_75_v"
            app:layout_constraintEnd_toEndOf="@id/partido_guideline_75_v"

            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/partido_nombre_visita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_jornada_equipo_2"
            android:textColor="@color/cardview_light_background"
            android:padding="10dp"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/partido_guideline_15_h"
            app:layout_constraintBottom_toBottomOf="@id/partido_guideline_15_h"
            app:layout_constraintStart_toEndOf="@id/partido_marcador_visita"
            />

    <Spinner
        android:id="@+id/partido_ingresar_evento_tipo_local"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/partido_guideline_30_h"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/partido_guideline_50_v"
        />
    <Spinner
        android:id="@+id/partido_ingresar_evento_jugador_local"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/partido_ingresar_evento_tipo_local"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/partido_guideline_50_v"

        />
    <Button
        android:id="@+id/partido_ingresar_evento_aceptar_local"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Añadir"
        app:layout_constraintTop_toBottomOf="@id/partido_ingresar_evento_jugador_local"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/partido_guideline_50_v"
        />

    <Spinner
        android:id="@+id/partido_ingresar_evento_tipo_visita"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/partido_guideline_30_h"
        app:layout_constraintStart_toStartOf="@id/partido_guideline_50_v"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Spinner
        android:id="@+id/partido_ingresar_evento_jugador_visita"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/partido_ingresar_evento_tipo_visita"
        app:layout_constraintStart_toStartOf="@id/partido_guideline_50_v"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/partido_ingresar_evento_aceptar_visita"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Añadir"
        app:layout_constraintTop_toBottomOf="@id/partido_ingresar_evento_jugador_visita"
        app:layout_constraintStart_toStartOf="@id/partido_guideline_50_v"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <View
        android:layout_width="3dp"
        android:layout_height="0dp"
        android:background="@android:color/black"
        app:layout_constraintStart_toStartOf="@id/partido_guideline_50_v"
        app:layout_constraintTop_toBottomOf="@id/partido_guideline_30_h"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ListView
        android:id="@+id/partido_eventos_local"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/partido_ingresar_evento_aceptar_local"
        android:layout_marginStart="5dp"
        />



    <ListView
        android:id="@+id/partido_eventos_visitas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/partido_guideline_50_v"
        app:layout_constraintTop_toBottomOf="@id/partido_ingresar_evento_aceptar_visita"
        android:layout_marginStart="5dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>



